--- a/style.css
+++ b/style.css
@@ -94,13 +94,6 @@ main{
     width: 100%;
 }
 
-/* .container::after{
-    content: "";
-    display: block;
-    width: 100%;
-    height: 0;
-    clear: both;
-} */
 
 .text-container{
     float: left;
@@ -110,6 +103,7 @@ main{
     font-family: 'Odibee Sans', cursive;
     font-size: 300%;
     color: #0c0c0c;
+    margin-bottom: 8px;
 }
 
 .post{
@@ -235,6 +229,7 @@ main{
 
 .testimonial-text{
     color: #4e4e4e;
+    line-height: 1.4;
 }
 
 .btn-container{
